# localbrain

./: .gitignore  .releaserc.json  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
clients/rust/: Cargo.toml  README.md
clients/rust/examples/: basic.rs
clients/rust/src/: lib.rs
docs/: README.md
examples/express-app/: README.md
examples/nextjs-app/: README.md
scripts/: e2e.mjs  stress.mjs
